@@ -2,4 +2,5 @@
 pkg
 rdoc
 backup
+sandbox
 *~
