@@ -3,6 +3,7 @@
 * set delegate default no longer freezes value
 * added :duplicate_default attribute to turn off default
   value duplication
+* standardized formatting of argument names
 
 == 0.4.1 / 2009-03-23
 
